@@ -332,121 +332,6 @@ sub compile_subtrees
         $ok = $self->setAlias($token, $apath) ? $ok:0;
     }
 
-    # Handle file patterns -- we're still in compile_subtrees()
-
-    foreach my $fp ( $node->getChildrenByTagName('filepattern') )
-    {
-        my $type = $fp->getAttribute('type');
-        my $name = $fp->getAttribute('name');
-        my $file_re = $fp->getAttribute('filere');
-        my $dirname = $self->getNodeParam($token, 'data-dir');
-
-        if($type ne 'subtree' and $type ne 'leaf')
-        {
-            Error("Unknown filepattern type: $type at $path"); $ok = 0;
-        }
-        elsif( not defined($name) or not defined($file_re) )
-        {
-            Error("Filepattern name or RE not defined at $path"); $ok = 0;
-        }
-        elsif( not defined($dirname) )
-        {
-            Error("data-dir parameter not defined at $path"); $ok = 0;
-        }
-        elsif( not -d $dirname )
-        {
-            Error("Directory $dirname does not exist at $path"); $ok = 0;
-        }
-        else
-        {
-            $file_re = $self->expand_name($path, $file_re);
-
-            # Read the directory and match the pattern
-            my %applied = ();
-            opendir(DIR, $dirname) or die "can't opendir $dirname: $!";
-            while( (my $fname = readdir(DIR)) )
-            {
-                if( $fname =~ /$file_re/ )
-                {
-                    my $newnodename = eval($name);
-                    if( defined $applied{$newnodename} )
-                    {
-                        Error("Filepattern gives non-unique names: " .
-                              "name=\"$name\" filere=\"$file_re\" at $path");
-                        $ok = 0;
-                    }
-                    else
-                    {
-                        $applied{$newnodename} = $fname;
-                    }
-                }
-            }
-            closedir DIR;
-            # Clone the contents of filepattern into the main tree
-            my %detailedmatched = ();
-            foreach my $newnodename (keys %applied)
-            {
-                my $newnode = XML::LibXML::Element->new( $type );
-                $newnode->setAttribute('name', $newnodename);
-                $node->parentNode()->appendChild($newnode);
-
-                my $childname = $newnodename;
-                $childname .= '/' if $type eq 'subtree';
-                my $newnodetoken = $self->addChild($token, $childname);
-                my $newnodepath = $path.$childname;
-
-                $self->setNodeParam($newnodetoken, 'data-file',
-                                $applied{$newnodename});
-
-                foreach my $fpchild ($fp->childNodes())
-                {
-                    if( $fpchild->nodeName() eq 'detailed' )
-                    {
-                        my $match =  $fpchild->getAttribute('match');
-                        if( not defined $match )
-                        {
-                            Error("Detailed should have match at $path");
-                            $ok = 0;
-                        }
-                        else
-                        {
-                            if( not defined $detailedmatched{$match} )
-                            {
-                                $detailedmatched{$match} = 0;
-                            }
-                            if( $match eq $newnodename )
-                            {
-                                $detailedmatched{$match} = 1;
-                                foreach my $detnode ( $fpchild->childNodes() )
-                                {
-                                    $newnode->
-                                        appendChild($detnode->cloneNode(1));
-                                }
-                            }
-                        }
-                    }
-                    else
-                    {
-                        $newnode->appendChild($fpchild->cloneNode(1));
-                    }
-                }
-                $ok = $self->
-                    compile_subtrees( $newnode, $newnodetoken ) ? $ok:0;
-            }
-
-            # Check if any of detailed have not matched
-
-            foreach my $match (keys %detailedmatched)
-            {
-                if( not $detailedmatched{$match} )
-                {
-                    Warn("Detailed match \"$match\" have not matched any ".
-                         "file at $path");
-                }
-            }
-        }
-    }
-
     foreach my $setvar ( $node->getChildrenByTagName('setvar') )        
     {
         my $name = $setvar->getAttribute('name');
