@@ -1,3 +1,8 @@
+2007-04-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/ConfigTree/XMLCompiler.pm (compile_subtrees):
+	Removed support for <filepattern>
+
 2007-03-23  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/Renderer/RRDtool.pm (rrd_make_graphline):
